<resources>
    <string name="app_name">GQLJavaClient</string>
    <string name="btn_test_query">Test Query</string>
    <string name="btn_get_users">Get Users</string>
    <string name="btn_add_user">Add User</string>
    <string name="btn_delete_user">Delete User</string>
    <string name="hint_user_name">Input User Name</string>
    <string name="hint_user_age">Input User Age</string>
    <string name="hint_user_id">Input User ID</string>
</resources>
